# NekoTrans

./: .gitignore  Cargo.toml  README.md  go.mod  sync_github.bat
apps/android-agent/: README.md  gradle.properties  settings.gradle.kts
apps/android-agent/app/: build.gradle.kts
apps/android-agent/app/src/main/: AndroidManifest.xml
apps/android-agent/app/src/main/java/com/nekotrans/agent/: AgentCapability.kt  AgentServer.kt  MainActivity.kt  SessionState.kt  TransferService.kt
apps/android-agent/app/src/main/res/values/: strings.xml  themes.xml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: adb.rs  agent.rs  lib.rs  main.rs
apps/desktop/src-tauri/target-hotfix/: .rustc_info.json
apps/desktop/ui/: index.html  main.js  styles.css
cmd/hfx/: config.go  console_windows.go  console_write_other.go  console_write_windows.go  logger.go  main.go
crates/transfer-core/: Cargo.toml
crates/transfer-core/src/: checkpoint.rs  engine.rs  inventory.rs  lib.rs  logging.rs  models.rs  protocol.rs  scheduler.rs
docs/: ARCHITECTURE.md  HARDWARE_VALIDATION.md
internal/hfx/: adb.go  block.go  client.go  constants.go  dir.go  read.go  transfer.go  utils.go  write.go
internal/proto/: channel.go
scripts/: desktop-worker-smoke.ps1  fixture-smoke.ps1  hardware-smoke.ps1
