[package]
name = "nekotrans-desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
transfer-core = { path = "../../../crates/transfer-core" }

[lib]
name = "nekotrans_desktop_lib"
path = "src/lib.rs"

[[bin]]
name = "nekotrans-desktop"
path = "src/main.rs"

[[bin]]
name = "desktop_worker_smoke"
path = "src/bin/desktop_worker_smoke.rs"
